<resources>
    <string name="app_name">AB/BM-Single v2.4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Brace Monitor</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_download">Download</string>
    <string name="action_upload">Upload</string>
    <string name="action_clear">Clear Memory</string>

    <string name="title_section1">Real-time Plot</string>
    <string name="title_section3">Device Config</string>
    <string name="title_section4">Advanced</string>
    <string name="title_section5">Terminate Link</string>
    <string name="title_section6">Analyze</string>

    <string name="reference_force_passive">Reference Force Value (N)</string>
    <string name="reference_force_active">Reference Pressure Value (mmHg)</string>

    <string name="force_plot_passive">Force Compliance</string>
    <string name="force_plot_active">Pressure Compliance</string>

    <string name="force_temp_passive">Force and Temperature Compliance</string>
    <string name="force_temp_active">Pressure and Temperature Compliance</string>

    <string name="force_average_passive">Daily Force Average</string>
    <string name="force_average_active">Daily Pressure Average</string>
</resources>
